Update fedex-api-test-automation/src/test/java/com/fedex/automation/steps/PrintfulSteps.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>